# cargo-index-tool

./: Cargo.toml
src/: home.rs  main.rs
