[package]
authors = ["Brian Anderson <banderson@mozilla.com>"]
name = "cargo-index-tool"
version = "0.1.0"

[dependencies]
error-chain = "0.10.0"
serde_json = "1.0.2"
structopt = "0.0.5"
structopt-derive = "0.0.5"
walkdir = "1.0.7"
semver = { version = "0.7.0", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"

[target."cfg(windows)".dependencies]
winapi = "0.2.8"
winreg = "0.3.2"
shell32-sys = "0.1.1"
ole32-sys = "0.2.0"
kernel32-sys = "0.2.1"
advapi32-sys = "0.2.0"
userenv-sys = "0.2.0"
scopeguard = "0.3.2"